--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,8 @@
     },
     "dev": {
       "persistent": true,
-      "cache": false
+      "cache": false,
+      "dependsOn": ["^build"]
     }
   }
 }
