--- a/libs/sudoku/package.json
+++ b/libs/sudoku/package.json
@@ -7,11 +7,21 @@
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "tsup": "^8.1.0",
     "typescript": "^5.5.3"
   },
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts"
+    "dev": "tsup src/index.ts --format cjs,esm --dts",
+    "test:jest": "jest --passWithNoTests --updateSnapshot --coverage",
+    "test": "jest"
+  },
+  "dependencies": {
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.5.3"
   }
 }
