Fix Babel add new sudoku board methods

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,9 @@
       "persistent": true,
       "cache": false,
       "dependsOn": ["^build"]
+    },
+    "test": {
+      "dependsOn": ["^build"]
     }
   }
 }
