--- a/libs/sudoku/package.json
+++ b/libs/sudoku/package.json
@@ -7,7 +7,10 @@
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/jest": "^29.5.12",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "tsup": "^8.1.0",
     "typescript": "^5.5.3"
