--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "private": "true",
   "dependencies": {
     "@changesets/cli": "^2.27.7",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
     "turbo": "^2.0.6"
   },
   "scripts": {
@@ -20,6 +22,9 @@
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
-    "node": ">=20.0.0 <21.0.0"
+    "node": ">=20.0.0 <22.0.0"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7"
   }
 }
