--- a/libs/sudoku/package.json
+++ b/libs/sudoku/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "test:jest": "jest --passWithNoTests --updateSnapshot --coverage",
     "test": "jest"
   },
