--- a/ReactSimpleGames/package.json
+++ b/ReactSimpleGames/package.json
@@ -11,7 +11,7 @@
     "turbo-dev": "turbo run dev --filter react-tac-toe..."
   },
   "dependencies": {
-    "@jeremychrimes/sudoku": "*",
+    "@jeremychrimes/sudoku": "workspace:*",
     "@vanilla-extract/css": "^1.15.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -29,7 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.2.5",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.3",
     "vite": "^5.2.0"
   }
 }
