--- a/libs/sudoku/package.json
+++ b/libs/sudoku/package.json
@@ -7,6 +7,7 @@
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "7.24.9",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@types/jest": "^29.5.12",
