--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@babel/core": "7.24.9",
     "@babel/preset-typescript": "^7.24.7",
+    "changesets": "^1.0.2",
     "jest": "^29.7.0",
     "syncpack": "^12.3.3",
     "ts-jest": "^29.1.5",
