--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "repository": "jeremychrimes/node-repo/",
   "scripts": {
     "dev": "turbo dev",
-    "prepare-publish": "turbo run build test && changeset version",
+    "prepare-publish": "turbo run build test && changeset && changeset version",
     "publish-packages": "turbo run build test && changeset publish"
   },
   "workspaces": [
