--- a/.syncpackrc
+++ b/.syncpackrc
@@ -5,7 +5,7 @@
       "label": "Use workspace protocol when developing local packages",
       "dependencies": ["$LOCAL"],
       "dependencyTypes": ["dev", "prod"],
-      "pinVersion": "workspace:*"
+      "pinVersion": "*"
     }
   ]
 }
