--- a/apps/ReactSimpleGames/package.json
+++ b/apps/ReactSimpleGames/package.json
@@ -11,7 +11,7 @@
     "turbo-dev": "turbo run dev --filter react-tac-toe..."
   },
   "dependencies": {
-    "@jeremychrimes/sudoku": "workspace:*",
+    "@jeremychrimes/sudoku": "*",
     "@vanilla-extract/css": "^1.15.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
