--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jeremychrimes-node",
   "version": "1.0.0",
   "author": "Jeremy Chrimes",
+  "private":true,
   "dependencies": {
     "@changesets/cli": "^2.27.7",
     "turbo": "^2.0.9"
@@ -18,7 +19,6 @@
   "engines": {
     "node": ">=20.0.0 <22.0.0"
   },
-  "packageManager": "yarn@4.3.1",
   "repository": "jeremychrimes/node-repo/",
   "scripts": {
     "dev": "turbo dev",
@@ -28,5 +28,6 @@
   "workspaces": [
     "apps/ReactSimpleGames",
     "libs/sudoku"
-  ]
+  ],
+  "packageManager": "yarn@1.22.22"
 }
