--- a/apps/jeremychrimes-blog-frontend/package.json
+++ b/apps/jeremychrimes-blog-frontend/package.json
@@ -7,10 +7,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "turbo-dev": "turbo run dev --filter jeremychrimes-blog-frontend...",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@mantine/core": "^7.11.2",
+    "@mantine/hooks": "^7.11.2",
+    "@tanstack/react-query": "^5.51.15",
+    "@types/axios": "^0.14.0",
     "axios": "^1.7.2",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -20,7 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "9.8.0",
+    "eslint": "^8.5.6",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.5.3",
