--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@changesets/cli": "^2.27.7",
+    "prettier": "^3.3.3",
     "turbo": "^2.0.9"
   },
   "devDependencies": {
