--- a/apps/jeremychrimes-blog-frontend/package.json
+++ b/apps/jeremychrimes-blog-frontend/package.json
@@ -1,16 +1,6 @@
 {
   "name": "jeremychrimes-blog-frontend",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "turbo-dev": "turbo run dev --filter jeremychrimes-blog-frontend...",
-    "format": "prettier --write ."
-  },
   "dependencies": {
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
@@ -32,5 +22,15 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.5.3",
     "vite": "^5.3.4"
-  }
+  },
+  "private": true,
+  "scripts": {
+    "build": "tsc -b && vite build",
+    "dev": "vite",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "turbo-dev": "turbo run dev --filter jeremychrimes-blog-frontend..."
+  },
+  "type": "module"
 }
